--- a/containers/apache2/apache2_with_fluentbit_deployment.yaml
+++ b/containers/apache2/apache2_with_fluentbit_deployment.yaml
@@ -56,6 +56,7 @@ spec:
         - name: apache2-logs
           mountPath: /etc/apache2/apache2.conf
           subPath: apache2_configs/apache2.conf
+          readOnly: true
         - name: apache2-logs
           mountPath: /var/log/apache2
           subPath: apache2_logs
